# old_docs

./: Latex2wikiWritingClient.py  Latex2wikiquickStart.py  Makefile  README.md  TODO  index.html
api/: Makefile  README  pguide.tex  writing_client.tex  writing_server.tex
boiler/: acronyms.tex  bnf-grammar.tex  developers.tex  dods-def.tex  dods-glossary.bib  html-refs.tex  implementors.tex  layout.tex  questions.tex  rpc-developers.tex  warning.tex
design/: README
dodsview/: IDL.cgi  Makefile.idlgif  cbar.pro  configdata  getCatalogInfo.pl  getDatasetInfo.pl  multipleview.cgi  pal_avhrr.pro  pal_sw2.pro  peter_gif.pro  peter_gif_ex.pro  testpal2.pro  testpal3.pro  testpal4.pro  view_tmparr.pro
dodsview/idl-cmdln/: BUGS  COPYRIGHT  INSTALL  Makefile  Makefile.in  Makefile.original  README  TODO  comp_struct.pro  config.status  config_idl.h  config_idl.h.in  configure.in  dods_attr.pro  dods_setup.pro  get_dods_das.pro  get_dods_data.pro  idlgif  idlgif.cc  idlgif.cc.linux  idlgif.cpp  includes.cpp  print_dods_dds.pro  test.pro
examples/: dasex.fmt  dasex1.das  dasex2.das  ffarr1.fmt  ffarr3.fmt
latex/: Makefile  Makefile.epsfig  acronym.dtx  acronym.ins  changebar.bug  changebar.idx  changebar.ins  changebar.sty  dods-book.dtx  dods-book.ins  dods-book2.dtx  dods-book2.ins  dods-look.hlx  dods-paper.dtx  emulate.hlx  epsfig  epsfig.2e  giftext.pl  gloss.hlx  glsbase.bib  html.sty  listing.sty  manifest.txt  margins.sty  mparhack.dtx  proto.sty  vcode.ins
management/: docmatrix.pl  docmatrix.pln
notes/: release-3.3.txt  release-3.4.txt
papers/: EIM-Metacat-Searching.6.5.11.v3.final.doc  EIM-Metacat-Searching.8.2.11.v4.final.doc  cyb.bib  cyb.tex
readme/: INSTALL  INSTALL-clients  INSTALL-servers  README  README-etc  index.html
server/: README  agg.tex
testing/: .htaccess
user/: INSTALL-servers  Makefile  README  README-binary  URL-construction  docguide.tex  guide.aux  guide.ilg  guide.ind  guide.lof  guide.lot  guide.ps  mgui.ilg  (+23 more)
(+1648 files in other folders)
