dnl -*- m4 -*-
dnl Process this file with autoconf to produce a configure script.

AC_REVISION($Id$)
AC_INIT(idl_dods.cc)
AC_CONFIG_HEADER(config_idl.h)
AC_CONFIG_AUX_DIR(../../../etc)

AC_PREFIX_DEFAULT("\$(DODS_ROOT)")

DODS_GET_DODS_ROOT

DODS_FIND_PACKAGES_DIR

DODS_DIRECTORY_VERSION

dnl The command to use to generate dependencies for Makefiles
depend=${dods_relative}/etc/depend.sh
AC_SUBST(depend)

dnl flags for the compilers and linkers - set these before locating the
dnl actual tools since some of the AC_PROG macros set these `flag variables'
dnl to default values otherwise.

AC_CANONICAL_HOST

# Until further notice OS X port doesn't get -gstabs because of an
# apparent bug in their gcc 3.3 clone (a beta).  If you see this after 
# 1/1/2005, you can probably remove it.  Much earlier perhaps.  ROM - 6/03.
case "${host_cpu}:${host_vendor}:${host_os}" in
     powerpc:apple:netbsd*)
       CFLAGS=${CFLAGS-"-O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-O2 $CXXFLAGS"}
       break;;
    *:*:*)
       CFLAGS=${CFLAGS-"-gstabs -O2 $CFLAGS"}
       CXXFLAGS=${CXXFLAGS-"-gstabs -O2 $CXXFLAGS"}
       break;;
esac

AC_PROG_LN_S
AC_PROG_CC
AC_PROG_CXX
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AC_PROG_AWK

DODS_GCC
DODS_IDL
DODS_PROG_GTAR
DODS_PROG_PERL

dnl You should have g++, but you can override that with an environment
dnl variable. 
CXX=${CXX-g++}
AC_MSG_RESULT(Setting CXX to $CXX)
AC_SUBST(CXX)

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

dnl Checks for specific libraries
AC_CHECK_LIB(pthread, pthread_testcancel, 
	[LIBS="$LIBS -lpthread"
	 AC_DEFINE(_REENTRANT)])

dnl Checks for library functions.

DODS_CHECK_SIZES

DODS_COMPRESSION_LIB
DODS_RX_LIB
DODS_WWW_LIB

DODS_EFENCE
DODS_DBNEW
DODS_DEBUG_OPTION

AC_OUTPUT(Makefile)
